--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         				<div class="h_gallery_item">
         					<div class="g_img_item">
         						<img class="img-fluid" src="img/projects/suzuki.jpg" alt="">
-        						<a class="light" href="img/gallery/project-1.jpg"><img src="img/gallery/icon.png" alt=""></a>
+        						<a class="light" href="projects/suzuki/index.html"><img href="projects/suzuki/index.html" alt=""></a>
         					</div>
         					<div class="g_item_text">
         						<h4>Suzuki Motors</h4>
