fresh start finished tss

--- a/index.html
+++ b/index.html
@@ -261,16 +261,16 @@
                         </a>
         			</div>
         			<div class="col-lg-4 col-md-4 col-sm-6 manipul creative design print">
-        				<div class="h_gallery_item">
+        				<a href="projects/swagelok/index.html"><div class="h_gallery_item">
         					<div class="g_img_item">
-        						<img class="img-fluid" src="img/projects/collegespring.jpg" alt="">
-        						<a class="light" href="img/gallery/project-3.jpg"><img src="img/gallery/icon.png" alt=""></a>
+                                <img class="img-fluid" src="img/projects/collegespring.jpg">
         					</div>
         					<div class="g_item_text">
         						<h4>College Spring</h4>
         						<p>Academic Mentor</p>
         					</div>
         				</div>
+                        </a>
         			</div>
         			<div class="col-lg-4 col-md-4 col-sm-6 brand creative print">
         				<div class="h_gallery_item">
