--- a/projects/collegeSpring/index.html
+++ b/projects/collegeSpring/index.html
@@ -131,7 +131,7 @@
                 </span>
                 
                 <span>  
-                    <b>How It Works</b>
+                    <b>How It Works</b>[']
                     <br><br>
                 <div class="section-content">
                     <span>
